更新 jshintrc以便逗号可以在行首

--- a/.jshintrc
+++ b/.jshintrc
@@ -37,7 +37,7 @@
   "iterator": false,
   "lastsemic": false,
   "laxbreak": false,
-  "laxcomma": false,
+  "laxcomma": true,
   "loopfunc": true,
   "maxerr": false,
   "moz": false,
